overflow bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
     width: 80%;
     margin: 0 auto;
+    overflow-y: hidden;
 }
